# taskcraft-runtime

./: .gitignore  Dockerfile  Makefile  README.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DESIGN_DECISIONS.md  SECURITY.md  architecture.md  deployment.md  project_structure.md  user_guide.md
examples/: desktop_worker.yaml  incident_reporter.yaml  incident_tools.py  stock_price_agent.py
examples/reference/: incident_reporter.yaml  incident_tools.py  walkthrough.md
src/: main.py
src/taskcraft/: main_cli.py
src/taskcraft/config/: loader.py  schema.py
src/taskcraft/core/: lifecycle.py  runtime.py
src/taskcraft/executor/: base.py  docker.py  local.py
src/taskcraft/governance/: policy.py
src/taskcraft/llm/: base.py  client.py
src/taskcraft/observability/: logger.py
src/taskcraft/planner/: base.py  dummy.py  gemini.py  tot.py
src/taskcraft/state/: models.py  persistence.py  postgres.py
src/taskcraft/tools/: decorators.py  definitions.py  desktop.py  fs_skills.py
tests/: conftest.py
tests/core/: test_lifecycle.py  test_recovery.py
tests/governance/: test_policy.py
tests/planner/: test_gemini_v2.py
