[project]
name = "taskcraft"
version = "0.1.0"
description = "A production-grade agent runtime layer for Gemini agents."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "google-generativeai>=0.3.0",
    "aiosqlite>=0.19.0",
    "structlog>=23.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskcraft"]
